add RNN description

--- a/RNNs/PlainRNN/Plain_RNN.ipynb
+++ b/RNNs/PlainRNN/Plain_RNN.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 207
         },
-        "outputId": "cf5a5538-80ef-40d2-deda-532f93f30bfb"
+        "outputId": "f6d9636a-405c-4d7c-b270-967df05b5f2b"
       },
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch"
@@ -57,12 +57,12 @@
           "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/cuongvng/neural-networks-with-PyTorch\n",
-            "  Cloning https://github.com/cuongvng/neural-networks-with-PyTorch to /tmp/pip-req-build-zdg5hgmd\n",
-            "  Running command git clone -q https://github.com/cuongvng/neural-networks-with-PyTorch /tmp/pip-req-build-zdg5hgmd\n",
+            "  Cloning https://github.com/cuongvng/neural-networks-with-PyTorch to /tmp/pip-req-build-ggi98otx\n",
+            "  Running command git clone -q https://github.com/cuongvng/neural-networks-with-PyTorch /tmp/pip-req-build-ggi98otx\n",
             "Building wheels for collected packages: train-plot-utils\n",
             "  Building wheel for train-plot-utils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for train-plot-utils: filename=train_plot_utils-1.0-cp36-none-any.whl size=5563 sha256=cf83b9eee37f12cafbccd2a2cbbefcafe44c0c4f5e0490b30d3b3f4d4f1df581\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-k9iq0rp9/wheels/f4/9e/b4/490959541c854701592541b5fc01eb4bf691e878c4496d3517\n",
+            "  Created wheel for train-plot-utils: filename=train_plot_utils-1.0-cp36-none-any.whl size=5563 sha256=cab497c276173b83e6ec548ee8a5d25f1e1d0c9ef0eda5005c52f32e6ba4a35e\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-8pdcvbk3/wheels/f4/9e/b4/490959541c854701592541b5fc01eb4bf691e878c4496d3517\n",
             "Successfully built train-plot-utils\n",
             "Installing collected packages: train-plot-utils\n",
             "Successfully installed train-plot-utils-1.0\n"
@@ -90,19 +90,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "73e889b3-8150-4044-bdf2-8b07a98e8df6"
+        "outputId": "ae4b3393-b8a5-4469-a548-8f9f93e7013c"
       },
       "source": [
         "!curl https://raw.githubusercontent.com/cuongvng/neural-networks-with-PyTorch/master/RNNs/data/EURUSD.csv > EURUSD.csv"
       ],
-      "execution_count": 12,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 1864k  100 1864k    0     0  1119k      0  0:00:01  0:00:01 --:--:-- 1118k\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 1864k  100 1864k    0     0  3804k      0 --:--:-- --:--:-- --:--:-- 3796k\n"
           ],
           "name": "stdout"
         }
@@ -127,7 +127,7 @@
         "%matplotlib inline\n",
         "import pandas as pd"
       ],
-      "execution_count": 14,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -156,7 +156,7 @@
         "ax = data[\"Ask\"].plot(figsize=(12,8), title=\"EUR-USD on 1 trading day\")\n",
         "plt.show()"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -203,7 +203,7 @@
         "print(\"Data test size:\", len(data_test))\n",
         "print(data_train[0])"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -241,13 +241,69 @@
         "train_loader = DataLoader(dataset=data_train, batch_size=128, shuffle=False, num_workers=4)\n",
         "test_loader = DataLoader(dataset=data_test, batch_size=128, shuffle=False, num_workers=4)"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
         "id": "wAtBZjxHfs7R",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "S6bYjiZ32ArX",
+        "colab_type": "text"
+      },
+      "source": [
+        "Now let take a revision on RNN with hidden state\n",
+        "\n",
+        "<figure>\n",
+        "    <center>\n",
+        "        <img src=\"https://github.com/d2l-ai/d2l-en/blob/master/img/rnn.svg?raw=1\"></img>\n",
+        "        <figcaption> Computational flow of RNN </figcaption>  \n",
+        "    </center>\n",
+        "</figure>\n",
+        "\n",
+        "As we can see, an RNN block at timestep $t$ take both the current input $X_t$ and the previous hidden state $H_{t-1}$ as its input. The block then outputs its current hidden state $H_t$ and and output value $O_t$. Those are calculated via\n",
+        "\n",
+        "$$\n",
+        "H_t = \\phi(X_{t-1}*W_{xh} + H_{t-1}*W_{hh} + b_h)\n",
+        "$$\n",
+        "\n",
+        "Here $W_{xh} \\in R^{d \\times h}$ and $W_{hh} \\in R^{h \\times h}$ are the weight parameters corresponding to the input and the previous hidden state, respectively. $b_h \\in R^h$ is the bias.\n",
+        "\n",
+        "After obtaining $H_t$, $O_t$ is determined as\n",
+        "\n",
+        "$$\n",
+        "O_t = H_t*W_{ho} + b_o\n",
+        "$$\n",
+        "\n",
+        "with $W_{ho} \\in R^{h \\times o}$ and $b_o \\in R^o$"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "MblQDgFI4MA5",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "yRfEE8CQ4bRe",
         "colab_type": "code",
         "colab": {}
       },
