update rnn description

--- a/RNNs/PlainRNN/Plain_RNN.ipynb
+++ b/RNNs/PlainRNN/Plain_RNN.ipynb
@@ -51,7 +51,7 @@
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -95,7 +95,7 @@
       "source": [
         "!curl https://raw.githubusercontent.com/cuongvng/neural-networks-with-PyTorch/master/RNNs/data/EURUSD.csv > EURUSD.csv"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -127,7 +127,7 @@
         "%matplotlib inline\n",
         "import pandas as pd"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -268,7 +268,7 @@
         "\n",
         "<figure>\n",
         "    <center>\n",
-        "        <img src=\"https://github.com/d2l-ai/d2l-en/blob/master/img/rnn.svg?raw=1\"></img>\n",
+        "        <img src=\"https://github.com/cuongvng/neural-networks-with-PyTorch/blob/master/RNNs/img/rnn.svg?raw=1\" width=75%></img>\n",
         "        <figcaption> Computational flow of RNN </figcaption>  \n",
         "    </center>\n",
         "</figure>\n",
@@ -279,9 +279,9 @@
         "H_t = \\phi(X_{t-1}*W_{xh} + H_{t-1}*W_{hh} + b_h)\n",
         "$$\n",
         "\n",
-        "Here $W_{xh} \\in R^{d \\times h}$ and $W_{hh} \\in R^{h \\times h}$ are the weight parameters corresponding to the input and the previous hidden state, respectively. $b_h \\in R^h$ is the bias.\n",
+        "Here $W_{xh} \\in R^{d \\times h}$ and $W_{hh} \\in R^{h \\times h}$ are the weight parameters corresponding to the input and the previous hidden state, respectively. $b_h \\in R^h$ is the bias. The result of the linear operation will be passed through an activation function $\\phi$.\n",
         "\n",
-        "After obtaining $H_t$, $O_t$ is determined as\n",
+        "After obtaining $H_t$, the output at the current timestep $O_t$ is determined by\n",
         "\n",
         "$$\n",
         "O_t = H_t*W_{ho} + b_o\n",
