--- a/RNNs/PlainRNN/Plain_RNN.ipynb
+++ b/RNNs/PlainRNN/Plain_RNN.ipynb
@@ -44,27 +44,28 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 190
+          "height": 207
         },
-        "outputId": "84f50740-b87b-429a-e0c2-94b386346952"
+        "outputId": "18048573-b7f6-43d8-8a13-1b409c596256"
       },
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch"
       ],
-      "execution_count": 4,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/cuongvng/neural-networks-with-PyTorch\n",
-            "  Cloning https://github.com/cuongvng/neural-networks-with-PyTorch to /tmp/pip-req-build-jw7utufh\n",
-            "  Running command git clone -q https://github.com/cuongvng/neural-networks-with-PyTorch /tmp/pip-req-build-jw7utufh\n",
-            "Requirement already satisfied (use --upgrade to upgrade): train-plot-utils==1.0 from git+https://github.com/cuongvng/neural-networks-with-PyTorch in /usr/local/lib/python3.6/dist-packages\n",
+            "  Cloning https://github.com/cuongvng/neural-networks-with-PyTorch to /tmp/pip-req-build-iyhthq1s\n",
+            "  Running command git clone -q https://github.com/cuongvng/neural-networks-with-PyTorch /tmp/pip-req-build-iyhthq1s\n",
             "Building wheels for collected packages: train-plot-utils\n",
             "  Building wheel for train-plot-utils (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for train-plot-utils: filename=train_plot_utils-1.0-cp36-none-any.whl size=5563 sha256=6b555a20d9e213f49edc3810f2b958d420613341f760ed563528130aa04e502b\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-66obv41y/wheels/f4/9e/b4/490959541c854701592541b5fc01eb4bf691e878c4496d3517\n",
-            "Successfully built train-plot-utils\n"
+            "  Created wheel for train-plot-utils: filename=train_plot_utils-1.0-cp36-none-any.whl size=5563 sha256=fa15a359b31c0418acea923a33e2b4c546eccbd7cfcfa97f895eb77cb65251ea\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-89lcfqrv/wheels/f4/9e/b4/490959541c854701592541b5fc01eb4bf691e878c4496d3517\n",
+            "Successfully built train-plot-utils\n",
+            "Installing collected packages: train-plot-utils\n",
+            "Successfully installed train-plot-utils-1.0\n"
           ],
           "name": "stdout"
         }
@@ -89,19 +90,19 @@
           "base_uri": "https://localhost:8080/",
           "height": 68
         },
-        "outputId": "78c6bfe0-4689-4680-da59-545f9e2101ee"
+        "outputId": "6d88afde-fd48-4b6c-d5f3-bfe2774d1fb1"
       },
       "source": [
         "!curl https://raw.githubusercontent.com/cuongvng/neural-networks-with-PyTorch/master/RNNs/data/EURUSD.csv > EURUSD.csv"
       ],
-      "execution_count": 5,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current\n",
             "                                 Dload  Upload   Total   Spent    Left  Speed\n",
-            "100 1864k  100 1864k    0     0  3329k      0 --:--:-- --:--:-- --:--:-- 3323k\n"
+            "\r  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0\r100 1864k  100 1864k    0     0  4366k      0 --:--:-- --:--:-- --:--:-- 4366k\n"
           ],
           "name": "stdout"
         }
@@ -116,7 +117,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "a4d45d61-3267-4911-9c2f-138812d57750"
+        "outputId": "1e2f05cf-7471-4651-86c3-fdcb29b436e4"
       },
       "source": [
         "import torch\n",
@@ -133,12 +134,12 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 28,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "cpu <class 'torch.device'>\n"
+            "cpu\n"
           ],
           "name": "stdout"
         }
@@ -170,7 +171,7 @@
         "ax = data[\"Ask\"].plot(figsize=(12,8), title=\"EUR-USD on 1 trading day\")\n",
         "plt.show()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -210,7 +211,7 @@
         "num_steps = 20\n",
         "batch_size = 128"
       ],
-      "execution_count": 19,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -222,7 +223,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 102
         },
-        "outputId": "eaa8e52f-36c6-42c9-adcd-4ebb1e61f467"
+        "outputId": "caa46c8c-6511-4c3c-e780-ee52530208d6"
       },
       "source": [
         "train_size = 0.8\n",
@@ -232,7 +233,7 @@
         "print(\"Data test size:\", len(data_test))\n",
         "print(data_train[0])"
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,7 +271,7 @@
         "train_loader = DataLoader(dataset=data_train, batch_size=batch_size, shuffle=False, num_workers=4)\n",
         "test_loader = DataLoader(dataset=data_test, batch_size=batch_size, shuffle=False, num_workers=4)"
       ],
-      "execution_count": 12,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -302,15 +303,25 @@
         "    </center>\n",
         "</figure>\n",
         "\n",
-        "As we can see, an RNN block at timestep $t$ take both the current input $X_t$ and the previous hidden state $H_{t-1}$ as its input. The block then outputs its current hidden state $H_t$ and and output value $O_t$. Those are calculated via\n",
+        "As we can see, an RNN block at timestep $t$ take 2 inputs:\n",
+        "- The input at the current timestep $X_t$, `shape = (batch_size, num_features)`.\n",
+        "- The previous hidden state $H_{t-1}$, `shape = (batch_size, num_hidden)`. \n",
+        "\n",
+        "The block then outputs its current hidden state $H_t$ and and output value $O_t$. Those are calculated via\n",
         "\n",
         "$$\n",
         "H_t = \\phi(X_{t-1}*W_{xh} + H_{t-1}*W_{hh} + b_h)\n",
         "$$\n",
         "\n",
-        "Here $W_{xh} \\in R^{d \\times h}$ and $W_{hh} \\in R^{h \\times h}$ are the weight parameters corresponding to the input and the previous hidden state, respectively. $b_h \\in R^h$ is the bias. \n",
+        "Here:\n",
+        "- $X_t$ has the shape of `(batch_size, num_features)`.\n",
+        "- $W_{xh} \\in R^{d \\times h}$, i.e., `shape = (num_features, num_hidden)`\n",
+        "- $W_{hh} \\in R^{h \\times h}$, i.e., `shape = (num_hidden, num_hidden)`\n",
         "\n",
-        "$d$ is the number of features of the data at each timestep, while $h$ is the number of hidden units (it is a tunable hyperparameter). In our case, $X_t$ has the shape of `(num_steps, 1)`, which means $d=1$.\n",
+        "are the weight parameters corresponding to the input and the previous hidden state, respectively. \n",
+        "- $b_h \\in R^h$ is the bias, `shape = (num_hidden,)`. \n",
+        "\n",
+        "$d$ is the number of features of the data at each timestep, while $h$ is the number of hidden units (it is a tunable hyperparameter). In our case, $d=1$.\n",
         "\n",
         "The result of the linear operation will be passed through an activation function $\\phi$.\n",
         "\n",
@@ -320,7 +331,14 @@
         "O_t = H_t*W_{ho} + b_o\n",
         "$$\n",
         "\n",
-        "with $W_{ho} \\in R^{h \\times o}$ and $b_o \\in R^o$. In our time-series problem, we are going to predict the next forex rate given a sequence of previous rate, so $o=1$."
+        "with \n",
+        "- $W_{ho} \\in R^{h \\times o}$, `shape = (num_hidden, num_features)`\n",
+        "- $b_o \\in R^o$, `shape = (num_feature,)`.\n",
+        "- The output $O_t$ has shape of `(batch_size, num_features)`.\n",
+        "\n",
+        "In our time-series problem, we are going to predict the next forex rate given a sequence of previous rate, so $o=1$.\n",
+        "\n",
+        "**In short, the RNN model has 5 parameters we need to learn: $W_{xh}, W_{hh}, b_h, W_{ho}, b_o$.**"
       ]
     },
     {
@@ -358,7 +376,6 @@
         "        o = self.n_features\n",
         "        h = self.num_hidden\n",
         "        device = self.device\n",
-        "        print(device, type(device))\n",
         "        W_xh = torch.randn(size=(d, h), requires_grad=True, device=device)\n",
         "        W_hh = torch.randn(size=(h, h), requires_grad=True, device=device)\n",
         "        b_h = torch.randn(size=(h,), requires_grad=True, device=device)\n",
@@ -372,18 +389,20 @@
         "\n",
         "    def forward(self, inputs, state):\n",
         "        # Input shape: (batch_size, num_steps, n_features=1)\n",
+        "        # Transpose into: (num_steps, batch_size, n_features)\n",
+        "        inputs = torch.transpose(inputs, dim0=0, dim1=1)\n",
+        "\n",
         "        W_xh, W_hh, b_h, W_ho, b_o = self.params\n",
         "        outputs = []\n",
         "        H = state\n",
         "        for X in inputs:\n",
-        "            H = F.tanh(torch.mm(X, W_xh) + torch.mm(H, W_hh) + b_h)\n",
+        "            H = torch.tanh(torch.mm(X, W_xh) + torch.mm(H, W_hh) + b_h)\n",
         "            O = torch.mm(H, W_ho) + b_o\n",
         "            outputs.append(O)\n",
-        "        outputs = torch.cat(torch.tensor(outputs, dim=0))\n",
         "        \n",
         "        return outputs, H"
       ],
-      "execution_count": 33,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -393,39 +412,27 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 511
+          "height": 51
         },
-        "outputId": "96af8239-c91c-4749-e326-e844317fd94b"
+        "outputId": "d5f8733e-3068-4a40-d1fa-e7d16d8cc0bf"
       },
       "source": [
         "# A sanity check\n",
         "inputs = torch.randn(size=(batch_size, num_steps, 1))\n",
-        "rnn = RNN_scratch(batch_size=batch_size, num_hidden=128, n_features=1, device=device)\n",
+        "rnn = RNN_scratch(batch_size=batch_size, num_hidden=512, n_features=1, device=device)\n",
         "outputs, final_state = rnn(inputs, rnn.init_state)\n",
-        "print(outputs.shape)\n",
+        "print(outputs[-1].shape)\n",
         "print(final_state.shape)"
       ],
-      "execution_count": 34,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "cpu <class 'torch.device'>\n"
+            "torch.Size([128, 1])\n",
+            "torch.Size([128, 512])\n"
           ],
           "name": "stdout"
-        },
-        {
-          "output_type": "error",
-          "ename": "RuntimeError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-34-360f05531b26>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0minputs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_steps\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mrnn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mRNN_scratch\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mbatch_size\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnum_hidden\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m128\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_features\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdevice\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdevice\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0moutputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mfinal_state\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrnn\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrnn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minit_state\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfinal_state\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-33-2720481ad538>\u001b[0m in \u001b[0;36m__call__\u001b[0;34m(self, inputs, state)\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__call__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mforward\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minputs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mget_params\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-33-2720481ad538>\u001b[0m in \u001b[0;36mforward\u001b[0;34m(self, inputs, state)\u001b[0m\n\u001b[1;32m     34\u001b[0m         \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstate\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mX\u001b[0m \u001b[0;32min\u001b[0m \u001b[0minputs\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m             \u001b[0mH\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mF\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtanh\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW_xh\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW_hh\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb_h\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m             \u001b[0mO\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmm\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mW_ho\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mb_o\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0moutputs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mO\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: The size of tensor a (20) must match the size of tensor b (128) at non-singleton dimension 0"
-          ]
         }
       ]
     },
