--- a/CNNs/ResNet/ResNet.ipynb
+++ b/CNNs/ResNet/ResNet.ipynb
@@ -282,7 +282,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://github.com/cuongvng/neural-networks-with-PyTorch/blob/master/CNNs/ResNet/ResNet.ipynb\" target=\"_parent\">\n",
+        "<a href=\"https://colab.research.google.com/github/cuongvng/neural-networks-with-PyTorch/blob/master/CNNs/ResNet/ResNet.ipynb\" target=\"_parent\">\n",
         "    <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\">\n",
         "</a>"
       ]
@@ -301,7 +301,7 @@
       "source": [
         "!pip install git+https://github.com/cuongvng/neural-networks-with-PyTorch.git"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -335,7 +335,7 @@
       "source": [
         "!nvidia-smi"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -389,7 +389,7 @@
         "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
         "print(device)"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -461,7 +461,7 @@
         "classes = ('plane', 'car', 'bird', 'cat',\n",
         "           'deer', 'dog', 'frog', 'horse', 'ship', 'truck')"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,7 +552,7 @@
         "\n",
         "        return F.relu(X + X_clone)"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +657,7 @@
         "        \n",
         "        return X"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -670,7 +670,7 @@
       "source": [
         "net = ResNet34()"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -684,7 +684,7 @@
         "criterion = nn.CrossEntropyLoss()\n",
         "optimizer = optim.Adam(net.parameters(),lr=0.001)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -702,7 +702,7 @@
         "n_epochs = 10\n",
         "train_cnn(net, device, train_loader, test_loader, optimizer, criterion, n_epochs)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -739,7 +739,7 @@
       "source": [
         ""
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     }
   ]
