--- a/CNNs/ResNet/ResNet.ipynb
+++ b/CNNs/ResNet/ResNet.ipynb
@@ -540,7 +540,7 @@
         "        self.bn = nn.BatchNorm2d(num_features=out_channels)\n",
         "    \n",
         "    def forward(self, X):\n",
-        "        X_clone = X.clone()\n",
+        "        X_original = X.clone()\n",
         "        \n",
         "        X = self.conv3x3_1(X)\n",
         "        X = F.relu(self.bn(X))\n",
@@ -548,9 +548,9 @@
         "        X = self.bn(X)\n",
         "        \n",
         "        if self.use_1x1_conv:\n",
-        "            X_clone = self.conv1x1(X_clone)\n",
+        "            X_original = self.conv1x1(X_original)\n",
         "\n",
-        "        return F.relu(X + X_clone)"
+        "        return F.relu(X + X_original)"
       ],
       "execution_count": null,
       "outputs": []
